--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -309,7 +309,7 @@ h2.landing-info-h2 {
   .landing-intro {
     top: 50%;
     left: auto;
-    right: 66%;
+    right: 57%;
     transform: translate(0%, -50%);
   }
 
@@ -320,14 +320,14 @@ h2.landing-info-h2 {
     text-align: left;
     transform: translate(0%, -50%);
     right: auto;
-    left: 66%;
+    left: 57%;
   }
 }
 @media screen and (min-width: 1200px) {
   .landing-intro {
     top: 50%;
     left: auto;
-    right: 70%;
+    right: 60%;
     transform: translate(0%, -50%);
   }
 
@@ -338,7 +338,7 @@ h2.landing-info-h2 {
     text-align: left;
     transform: translate(0%, -50%);
     right: auto;
-    left: 70%;
+    left: 60%;
   }
 }
 @media screen and (min-width: 1600px) {
