--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@
   --vh: 100vh;
   --vh: 100svh;
 }
+html {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
 h1,
 h2,
 h3,
@@ -69,6 +73,7 @@ body {
   --cMaxWidth: 1920px;
   max-width: 100vw;
   overflow-x: hidden;
+  overscroll-behavior: none;
 }
 .main-body {
   max-width: 100vw;
